--- a/Epcot.html
+++ b/Epcot.html
@@ -21,7 +21,7 @@
             <li ><a id = 'MagicKingdom' href='MagicKingdom.html'>Magic Kingdom</a></li>
             <li ><a id= 'HollywoodStudios' href='HollywoodStudios.html'>Hollywood Studios</a></li>
             <li ><a id='AnimalKingdom' href='AnimalKingdom.html'>Animal Kingdom</a></li>
-            <li ><a id='Epcot' href='Epcot.html' class='current'>epcot</a></li>
+            <li ><a id='epcot' href='Epcot.html' class='current'>Epcot</a></li>
   
       
         </ol>
