--- a/MagicKingdom.html
+++ b/MagicKingdom.html
@@ -20,7 +20,7 @@
       <ol>
         
           <li><a href = "index.html">Home Page</a></li>
-          <li ><a id = 'MagicKingdom' href='MagicKingdom.html'class='current'>Magic Kingdom</a></li>
+          <li ><a id = 'magickingdom' href='MagicKingdom.html'class='current'>Magic Kingdom</a></li>
       <li ><a id= 'HollywoodStudios' href='HollywoodStudios.html'>Hollywood Studios</a></li>
       <li ><a id='AnimalKingdom' href='AnimalKingdom.html'>Animal Kingdom</a></li>
       <li ><a id='Epcot' href='Epcot.html'>Epcot</a></li>
