--- a/Epcot.html
+++ b/Epcot.html
@@ -14,6 +14,7 @@
   </head> 
 
     <body id='classforEpcot'>
+      <a class = "skip" href='#skip'>Skip to Main Content</a>
       <nav> 
         <ol>
 
@@ -27,7 +28,7 @@
         </ol>
         </nav>
   
-        <main>
+        <main class='text' id='skip'>
     <h1>Epcot</h1>
 
     <h2 id = 'Epcot'>The Epcot Pavillions: Ranked!</h2>
