--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab&family=Mouse+Memoirs&display=swap" rel="stylesheet">
+
 
     <title>Rachel Loves Disney</title>
   </head> 
 
   <body id='ClassforIndex'>
+    <a class = "skip" href='#skip'>Skip to Main Content</a>
     <nav> 
       <ol>
-        
           <li><a id='Homepage' href = "index.html" class='current' >Home Page</a></li>
           <li ><a id = 'MagicKingdom' href='MagicKingdom.html'  >Magic Kingdom</a></li>
         <li ><a id= 'HollywoodStudios' href='HollywoodStudios.html'  >Hollywood Studios</a></li>
@@ -27,7 +28,7 @@
       </ol>
       </nav>
     
-<main>
+<main class='Image' id='skip'>
 
 
   <h1>Rachel @ Disney</h1>
