--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body id='ClassforIndex'>
     <a class = "skip" href='#skip'>Skip to Main Content</a>
     <nav> 
-      <ul id='nav-items'>
-          <li id='nav-links'><a href = "index.html" class='current' >Home Page</a></li>
-          <li id = 'nav-links' ><a  href='MagicKingdom.html'  >Magic Kingdom</a></li>
-          <li id= 'nav-links'><a  href='HollywoodStudios.html'  >Hollywood Studios</a></li>
-          <li id='nav-links' ><a href='AnimalKingdom.html' >Animal Kingdom</a></li>
-          <li id='nav-links' ><a  href='Epcot.html' >Epcot</a></li>
+      <ul class=nav-items>
+          <li><a href = "index.html" class='current' >Home Page</a></li>
+          <li><a  href='magickingdom.html'  >Magic Kingdom</a></li>
+          <li ><a  href='hollywoodstudios.html'  >Hollywood Studios</a></li>
+          <li ><a href='animalkingdom.html' >Animal Kingdom</a></li>
+          <li><a  href='epcot.html' >Epcot</a></li>
        
     
       </ul>
