--- a/animalkingdom.html
+++ b/animalkingdom.html
@@ -22,6 +22,7 @@
           <li ><a  href='hollywoodstudios.html'  >Hollywood Studios</a></li>
           <li  ><a href='animalkingdom.html' class='current'>Animal Kingdom</a></li>
           <li  ><a  href='epcot.html' >Epcot</a></li>
+          <li><a href='contactform.html'>Contact Form</a></li>
        
     
       </ul>
