--- a/hollywoodstudios.html
+++ b/hollywoodstudios.html
@@ -22,6 +22,7 @@
           <li><a  href='hollywoodstudios.html' class='current' >Hollywood Studios</a></li>
           <li  ><a href='animalkingdom.html' >Animal Kingdom</a></li>
           <li ><a  href='epcot.html' >Epcot</a></li>
+          <li><a href='contactform.html'>Contact Form</a></li>
        
     
       </ul>
