--- a/magickingdom.html
+++ b/magickingdom.html
@@ -23,6 +23,7 @@
         <li><a  href='hollywoodstudios.html'  >Hollywood Studios</a></li>
         <li  ><a href='animalkingdom.html' >Animal Kingdom</a></li>
         <li  ><a  href='epcot.html' >Epcot</a></li>
+        <li><a href='contactform.html'>Contact Form</a></li>
      
   
     </ul>
