--- a/hollywoodstudios.html
+++ b/hollywoodstudios.html
@@ -23,6 +23,7 @@
           <li  ><a href='animalkingdom.html' >Animal Kingdom</a></li>
           <li ><a  href='epcot.html' >Epcot</a></li>
           <li><a href='contactform.html'>Contact Form</a></li>
+          <li><a href='gallery.html'>Gallery</a></li>
        
     
       </ul>
