--- a/contactform.html
+++ b/contactform.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z26X7S5C6J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z26X7S5C6J');
+</script>
   <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="imgs/Favicon2.webp">
@@ -48,8 +57,14 @@
         <button type="submit">Submit</button>
     
       </div>
+
+   
     </fieldset>
     </form>
+
+    <div class="parallax"></div>
+
+    
     </main>
   </body>
 </html>
