--- a/contactform.html
+++ b/contactform.html
@@ -66,8 +66,14 @@
   </div>
 
     <div class="parallax"></div>
+  </main>
+
+  
+    <footer>
+      <p1>Rachel Bachman &copy; 2021</p1>
+    </footer>
+
 
     
-    </main>
   </body>
 </html>
