--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img src="imgs/snowwhite.jpeg" alt="Me with Snow White" style="width:300px;height:300px;">
+                    <img src="imgs/snowwhite.jpeg" alt="Me with Snow White" >
                   </div>
                   <div class="flip-card-back">
                     <h3>Me and Snow White</h3>
@@ -59,7 +59,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="imgs/tinkerbell.JPG" alt="Me with Tinkerbell" style="width:300px;height:300px;">
+                        <img src="imgs/tinkerbell.JPG" alt="Me with Tinkerbell" >
                       </div>
                       <div class="flip-card-back">
                         <h3>Me and Tinkerbell</h3>
@@ -72,7 +72,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="imgs/charles.jpeg" alt="Me with my brother" style="width:300px;height:300px;">
+                        <img src="imgs/charles.jpeg" alt="Me with my brother" >
                       </div>
                       <div class="flip-card-back">
                         <h3>Me and my Brother with Mickey Mouse</h3>
@@ -85,7 +85,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="imgs/dad.jpeg" alt="Me with my dad" style="width:300px;height:300px;">
+                        <img src="imgs/dad.jpeg" alt="Me with my dad" >
                       </div>
                       <div class="flip-card-back">
                         <h3>Me and my Dad</h3>
@@ -97,7 +97,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="imgs/anna.JPG" alt="Me with Anna" style="width:300px;height:300px;">
+                        <img src="imgs/anna.JPG" alt="Me with Anna">
                       </div>
                       <div class="flip-card-back">
                         <h3>Me and Anna</h3>
@@ -105,6 +105,15 @@
                       </div>
                     </div>
                   </div>
+
+                 
+
+                  <footer>
+                    <p1>Rachel Bachman &copy; 2021</p1>
+                  </footer>
+
+                </body>
+                </html>
 
 
 
