--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <img id='pictureofmeandcharles' src='imgs/ castle.jpeg' alt= 'My brother and I in front of the castle at Magic Kingdom'/>
   <img id='pictureofmeandcharles1' src= 'imgs/ariel.jpeg' alt= 'Me dressed as ariel'/>
 
-
+  </main>
 
 
 <footer>
